Fixed Search Results overlap Added padding around blurb Fixed describtions running off screen -- artists page

--- a/bandradar/static/css/main.css
+++ b/bandradar/static/css/main.css
@@ -311,8 +311,6 @@ h5 {display: inline;}
 
 .content p{
  margin:.25em 0 0 0;
- 
- 
 }
 
 #band a:link{
@@ -344,8 +342,7 @@ h5 {display: inline;}
 #blurb {
  /*width: 90%;*/
  border-left: 2px dotted #0a396b;
- margin-left: .5em;
- margin-top: 1em;
+ margin: 2em 2em 1em .5em;
  text-align: left;
  padding-top: 0;
 }
